fix alignment issues

--- a/css/05-products.css
+++ b/css/05-products.css
@@ -1,16 +1,13 @@
 /*-- About Us  */
-.container-fluid .row {
-  padding: 0.20%;
-}
 
 .about-us-back {
   padding: 0.20%;
-  background: #222;
+  background: #313131;
 
 }
 
 .about-us-desc {
-  font-family: Times;
+  font-family: Georgia;
 }
 
 .black-space {
@@ -18,131 +15,92 @@
 }
 
 h1 {
-  color: #e1d8c6;
-  padding: 0.20%;
-  margin: 40px;
+  color: black;
+  margin-left: 210px;
 }
 
 .left-title {
   font-size: 24px;
+  margin-left: 15px;
+  color: #c0a878;
 }
 
 .text-right {
   color: #a8a8a8a8;
-  padding: 0.20%;
-  margin: 40px;
+  /* padding: 0.20%; */
+  margin-top: 25px;
 }
 
-.desc-about-us {
-  padding: 0.30%;
-  margin-top: 10px;
-  color: white;
-  font-family: Times;
-  font-size: 18px;
-}
-
-.desc-about-content {
-  color: #a8a8a8a8;
-  margin-top: 20px;
-  margin-bottom: 160px;
-}
-.icons-row {
-  background: white;
-  margin-top: 15px;
-}
-
-.icon-card {
-  background: white;
-}
-
-.icon-desc {
-  background: white;
-}
-
-.team-overview {
-  color: #e1d8c6;
-  font-size: 32px;
-  margin-top: 30px;
-}
-
-.team-overview-desc {
-  font-size: 14px;
-  color: #a8a8a8a8;
-}
-
-.png-rows {
-  margin: 30px 2px 5px 2px;
-  height: 180px;
-
-}
 
 .blank-img {
   margin-top: -100px;
   margin-left: 63px;
 }
 
-.john-doe {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 0px 0px 0px 0px;
-}
-
-.founder {
-  color: #a8a8a8a8;
-}
-
-.team-desc {
-  margin: 0px;
-}
-
-.social-media-icons {
-  color: #a8a8a8a8;
-}
-
-.spacing {
-  height: 100px;
-}
 
 
 /*---Products gallery---*/
 
-#row-gallery {
+/* #row-gallery {
   padding: 0 0 10px 90px;
+} */
+
+.row-gallery {
+  /* padding: 0 0 10px 90px; */
 }
+
+/* #image-button {
+  padding: 0 0 15px 0px;
+} */
 
 .row-image-button {
-  padding: 0 0 10px 15px;
-}
-#image-button {
-  padding: 0 0 15px 0px;
-  margin-right: 50px;
+  padding: 0px 0px 15px 0px;
+  margin-right: 15px;
 }
 
-#right-button {
+.right-button  {
+  float: right;
+}
+/* #right-button {
   float: right;
 
-}
+} */
+
+
 .btn-basic-right {
   align: right;
 }
-
-.row-gallery-1 .col-md-2 {
-  width: 250px;
-  height:250px;
+.btn-sm-gold {
+  color: #c0a878;
+  margin-left: 10px;
+  border: 1px solid #c0a878;
+}
+.btn-sm-prd {
+  width: 85px;
+  margin: 0px 1px 0px 1px;
 }
 
+.col-width {
+  width: 19.992%;
+  height: 150px;
+}
+
+.gutter {
+  margin-left: 10px;
+
+}
 .blank-img {
-  margin-top: -120px;
-  margin-left: 82px;
+  margin-top: -82px;
+  margin-left: 36px;
 }
 
 /* Product Banner */
 .image-center {
-  border: 1px solid white;
-  margin-left: 400px;
+  margin-left: 350px;
+  margin-top: 100px;
 }
 
 .black-space-products {
-  color: #222;
-  height: 150px;
+  color: #313131;
+  height: 100px;
 }
